:busts_in_silhouette: Add @junshuong as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -55,6 +55,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "junshuong",
+      "name": "Jun-Shuo Ng",
+      "avatar_url": "https://avatars.githubusercontent.com/u/45827759?v=4",
+      "profile": "https://github.com/junshuong",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
