--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -64,6 +64,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "ashraf-mustafa",
+      "name": "Ashraf Mustafa",
+      "avatar_url": "https://avatars.githubusercontent.com/u/48127747?v=4",
+      "profile": "https://www.wit.ie/",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
