--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/build-push-action@v1
         with:
           registry: ghcr.io
-          username: 'WIT-IoT-Apps-2021'
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           repository: WIT-IoT-Apps-2021/microbit-ble-vue
           tags: latest
