:busts_in_silhouette: Add @ewanhills as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -73,6 +73,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "ewanhills",
+      "name": "Ewan Hills",
+      "avatar_url": "https://avatars.githubusercontent.com/u/23585924?v=4",
+      "profile": "https://github.com/ewanhills",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
